# OSnap

./: .dockerignore  .editorconfig  .gitignore  404.html  Makefile  README.md  chromium-version.opam  chromium-version.opam.locked  component.test.json  dune  dune-project  index.html  osnap.config.json  osnap.opam  osnap.opam.locked  osnap.opam.template  package.json  sitemap.xml  static.patch
cleanup/: index.html
cli/: index.html
docker/: Dockerfile  Dockerfile.base  Dockerfile.centos  Dockerfile.debian  Dockerfile.node-arm64  Dockerfile.node-lts  Dockerfile.ubuntu
esy.lock/: index.json
lib/: OSnap.ml  OSnap.mli  OSnap.re  OSnap.rei  OSnap_Browser.re  OSnap_CDP.re  OSnap_CDP_Types.re  OSnap_Cleanup.ml  OSnap_Config.re  OSnap_Config.rei  OSnap_Io.re  OSnap_Paths.ml  OSnap_Paths.re  OSnap_Test.ml  OSnap_Test.re  OSnap_Utils.re  OSnap_Websocket.re  dune
lib/OSnap_Browser/: OSnap_Browser.ml  OSnap_Browser.mli  OSnap_Browser.re  OSnap_Browser.rei  OSnap_Browser_Actions.ml  OSnap_Browser_Actions.mli  OSnap_Browser_Actions.re  OSnap_Browser_Actions.rei  OSnap_Browser_Download.ml  OSnap_Browser_Download.mli  OSnap_Browser_Download.re  OSnap_Browser_KeyDefinition.ml  OSnap_Browser_KeyDefinition.re  OSnap_Browser_Launcher.ml  OSnap_Browser_Launcher.mli  OSnap_Browser_Launcher.re  OSnap_Browser_Launcher.rei  OSnap_Browser_Path.ml  OSnap_Browser_Path.mli  OSnap_Browser_Path.re  OSnap_Browser_Target.ml  OSnap_Browser_Target.mli  OSnap_Browser_Target.re  OSnap_Browser_Types.ml  OSnap_Browser_Types.re  OSnap_Browser_Utils.re  Zip.ml  Zip.mli  dune
lib/OSnap_CDP/: OSnap_CDP.re  OSnap_CDP_Dom.re  OSnap_CDP_Emulation.re  OSnap_CDP_Input.re  OSnap_CDP_Log.re  OSnap_CDP_Network.re  OSnap_CDP_Page.re  OSnap_CDP_Performance.re  OSnap_CDP_Runtime.re  OSnap_CDP_Target.re  OSnap_CDP_Types.re  dune
lib/OSnap_Config/: OSnap_Config.ml  OSnap_Config.re  OSnap_Config_Global.ml  OSnap_Config_Global.mli  OSnap_Config_Global.re  OSnap_Config_Global.rei  OSnap_Config_Test.ml  OSnap_Config_Test.mli  OSnap_Config_Test.re  OSnap_Config_Test.rei  OSnap_Config_Types.ml  OSnap_Config_Types.re  OSnap_Config_Utils.ml  OSnap_Config_Utils.re  OSnap_Config_Utils.rei  Utils.re  dune
lib/OSnap_Diff/: OSnap_Diff.ml  OSnap_Diff.mli  OSnap_Diff.re  OSnap_Diff.rei  OSnap_Diff_Io.ml  OSnap_Diff_Io.mli  OSnap_Diff_Io.re  OSnap_Diff_Io.rei  ReadPng.c  ReadPng.ml  ReadPng.re  dune
lib/OSnap_Diff/config/: discover.ml  discover.re  dune
lib/OSnap_Diff/png/: Osnap_Diff_Png.ml  Osnap_Diff_Png.mli  PngIo.c  PngIo.ml  dune
lib/OSnap_Diff/png_write/: WritePng.ml  dune
lib/OSnap_Logger/: OSnap_Logger.ml  OSnap_Logger.re  dune
lib/OSnap_Paths/: OSnap_Paths.ml  OSnap_Paths.mli  dune
lib/OSnap_Printer/: OSnap_Printer.ml  OSnap_Printer.re  dune
lib/OSnap_Response/: OSnap_Response.ml  OSnap_Response.re  dune
lib/OSnap_Server/: OSnap_Server.ml  OSnap_Server.mli  dune
lib/OSnap_Test/: OSnap_Test.ml  OSnap_Test.mli  OSnap_Test_Printer.ml  OSnap_Test_Types.ml  dune
lib/OSnap_Utils/: OSnap_Utils.ml  OSnap_Utils.mli  OSnap_Utils.re  OSnap_Utils.rei  dune
lib/OSnap_Websocket/: OSnap_Websocket.ml  OSnap_Websocket.mli  OSnap_Websocket.re  OSnap_Websocket.rei  dune
tags/: index.html
test/: RunTests.re  TestFramework.re  Tests_Config.re  dune  osnap.config.json
update/: index.html
(+75 files in other folders)
