(library
  (name OSnap)
  (flags (:standard -w +A-42-48-66-40 -warn-error +A-3-44-66-40))
  (libraries
    str
    uri
    odiff
    lwt
    lwt.unix
    yojson
    websocketaf
    websocketaf-lwt
    websocketaf-lwt-unix
    camlimages.png
  )
  (preprocess (pps
    lwt_ppx
    ppx_yojson_conv
  ))
)
