(library
  (name OSnap)
  (flags (:standard -w +A-42-48-66-40 -warn-error +A-3-44-66-40))
  (libraries
    str
    re
    uri
    odiff
    lwt
    lwt.unix
    yojson
    websocket
    websocket-lwt-unix
    websocketaf
    websocketaf-lwt
    websocketaf-lwt-unix
    camlimages.png
    fileutils
  )
  (preprocess (pps
    lwt_ppx
    ppx_yojson_conv
  ))
)
