(library
 (name OSnap_Diff)
 (flags
  (:standard
   -w
   +A-42-48-66-40
   -warn-error
   +A-3-44-66-40
   (:include png_flags.sexp)))
 (foreign_stubs
  (language c)
  (names ReadPng)
  (flags
   (:include png_c_flags.sexp)))
 (c_library_flags
  (:include png_c_library_flags.sexp))
 (libraries odiff-core WritePng))

(rule
 (targets png_flags.sexp png_c_flags.sexp png_c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
